beta add vies subject for student and +- create add and delete students in groups