@@ -1,15 +1,12 @@
-
 package org.santayn.testing.service;
 
-import org.santayn.testing.models.lecture.Lecture;
-import org.santayn.testing.models.question.Question;
 import org.santayn.testing.models.student.Student;
-import org.santayn.testing.repository.LectureRepository;
 import org.santayn.testing.repository.StudentRepository;
-import org.santayn.testing.repository.TestRepository;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class StudentService {
@@ -19,6 +16,7 @@ public class StudentService {
     public StudentService(StudentRepository studentRepository) {
         this.studentRepository = studentRepository;
     }
+
     public List<Student> findAll() {
         return studentRepository.findAll();
     }
@@ -26,6 +24,7 @@ public class StudentService {
     public Optional<Student> findById(Integer id) {
         return studentRepository.findById(id);
     }
+
     // Получение списка студентов по ID группы
     public List<Student> getStudentsByGroupID(Integer groupId) {
         if (groupId == null) {
@@ -43,19 +42,20 @@ public class StudentService {
             throw new IllegalArgumentException("Group ID and Student ID cannot be null");
         }
 
-        // Ищем студента напрямую через репозиторий
         return studentRepository.findStudentByGroupId(groupId).stream()
                 .filter(student -> student.getId().equals(studentId))
                 .findFirst()
                 .orElseThrow(() -> new RuntimeException(
                         "Студент с ID " + studentId + " не найден в группе с ID " + groupId));
     }
+
+    // Получение свободных студентов (не входящих в указанную группу)
     public List<Student> findFreeStudents(Integer groupId) {
         List<Student> allStudents = findAll();
         List<Student> studentsInGroup = getStudentsByGroupID(groupId);
 
         return allStudents.stream()
                 .filter(student -> !studentsInGroup.contains(student))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
